--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,65 @@
-version: "3"
+version: "3.8"
 services:
-  zabbix:
-  elasticsearch:
-  logstach:
-  kibana:
+  sql_db:
+    image: mysql:5.7.31
+    command:
+      - mysqld
+      - --character-set-server=utf8mb4
+      - --default-authentication-plugin=mysql_native_password
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./zabbix/var/lib/mysql:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=pwd
+      - MYSQL_DATABASE=zabbix1
+      - MYSQL_USER=zabbix
+      - MYSQL_PASSWORD=123
+    restart: always
+
+        
+  zabbix-server:
+    image: zabbix/zabbix-server-mysql
+    volumes:
+      - ./zabbix/alertscripts:/usr/lib/zabbix/alertscripts
+    restart: always
+    ports:
+      - "10051:10051"
+    environment:
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=pwd
+      - MYSQL_DATABASE=zabbix1
+      - ZBX_HISTORYSTORAGETYPES=log,text
+      - ZBX_DEBUGLEVEL=3
+      - ZBX_HOUSEKEEPINGFREQUENCY=1
+      - ZBX_MAXHOUSEKEEPERDELETE=5000
+    depends_on:
+      - sql_db
+ 
+  zabbix-web-apache:
+    image: zabbix/zabbix-web-apache-mysql
+    restart: always
+    environment:
+      - MYSQL_USER=zabbix
+      - MYSQL_PASSWORD=123
+      - MYSQL_DATABASE=zabbix1
+      - ZBX_SERVER_HOST=zabbix-server
+      - ZBX_POSTMAXSIZE=16M
+      - PHP_TZ=Europe/Riga
+      - ZBX_MAXEXECUTIONTIME=500
+    depends_on:
+      - sql_db
+      - zabbix-server
+    ports:  
+      - "80:7080"
+      - "443:8443"
+  
+  zabbix-agent:
+    privileged: true
+    image: zabbix/zabbix-agent
+    ports:
+      - "10050:10050"
+    network_mode: "host"
+    restart: unless-stopped
+    environment:
+      - ZBX_SERVER_HOST=zabbix-server
