--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,69 @@
 version: "3"
 services:
-  zabbix:
   elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.8.1
+    container_name: elasticsearch
+    environment:
+      - node.name=es-node-1    
+      - node.name=es-cluster       
+      - path.data=/usr/share/elasticsearch/data
+      - http.port=9200
+      - http.host=0.0.0.0
+      - transport.host=127.0.0.1
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms${ES_JVM_HEAP} -Xmx${ES_JVM_HEAP}"
+    ulimits:
+     memlock:
+       soft: -1
+       hard: -1
+    volumes:
+      - ${ES_MOUNT_DRIVE}:/usr/share/elasticsearch/data
+    ports:
+      - '9200:9200'
+    networks:
+      - elk
+    healthcheck:
+        test: ["CMD", "curl","-s" ,"-f", "-u", "elastic:${ES_PASSWORD}", "http://localhost:9200/_cat/health"]
+   
+
+        #Creatin logstach        
   logstach:
+    image: docker.elastic.co/logstash/logstash:7.8.1
+    container_name: logstash
+    ports:
+      - "9600:9600"
+      - "5145:5145/udp"   
+    command: logstash -f /etc/logstash/conf.d/logstash.conf
+    #    restart: always
+    volumes:
+      - ./logstash/logstash.conf:/etc/logstash/conf.d    
+    networks:
+      - elk
+    depends_on:
+      - 'elasticsearch' 
+
+
+        #Creating kibana
   kibana:
+    image: docker.elastic.co/kibana/kibana:7.8.1
+    container_name: kibana
+    environment:
+      - "ELASTICSEARCH_PASSWORD=${ES_PASSWORD}"
+      - server.port=127.0.0.1:5601
+      - elasticsearch.url="http://localhost:9200"
+      - server.name="kibana"
+    ports:
+      - '5601:5601'
+    healthcheck:
+        test: ["CMD", "curl", "-s", "-f", "http://localhost:5601/login"]
+        retries: 6
+    networks:
+      - elk      
+    depends_on:
+      - 'elasticsearch'   
+
+                  
+     
+networks:
+  elk:
+    driver: bridge 
