--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,10 +33,10 @@ services:
     ports:
       - "9600:9600"
       - "5145:5145/udp"   
-    command: logstash -f /etc/logstash/conf.d/logstash.conf
     #    restart: always
     volumes:
-      - ./logstash/logstash.conf:/etc/logstash/conf.d    
+      - ./logstash:/etc/logstash/conf.d        
+    command: logstash -f /etc/logstash/conf.d/logstash.conf
     networks:
       - elk
     depends_on:
